tests/snapshots/formats__caf__aac-afconvert.caf.snap
---
source: tests/formats.rs
expression: "common::explore(&display_name(&path), &data)"
---
▾ aac-afconvert.caf — CAF AAC, 16 kHz, mono, 200 ms  [0x0+0x1273]
    File type: "caff"  [0x0+0x4]
    Version: 1  [0x4+0x2]
    Flags: 0  [0x6+0x2]
  ▾ desc — AAC, 16 kHz, 1 ch  [0x8+0x2c]
      Chunk type: "desc"  [0x8+0x4]
      Chunk size: 32  [0xc+0x8]
      Sample rate: 16000  [0x14+0x8]
      Format ID: "aac" — AAC  [0x1c+0x4]
      Format flags: 0  [0x20+0x4]
      Bytes per packet: 0  [0x24+0x4]
      Frames per packet: 1024  [0x28+0x4]
      Channels per frame: 1  [0x2c+0x4]
      Bits per channel: 0  [0x30+0x4]
  ▾ kuki — AAC LC, 16000 Hz, channel configuration 1  [0x34+0x33]
      Chunk type: "kuki"  [0x34+0x4]
      Chunk size: 39  [0x38+0x8]
    ▾ ES descriptor — AAC LC, 16000 Hz, channel configuration 1  [0x40+0x27]
        Tag: ES_Descriptor (0x3)  [0x40+0x1]
        Length: 34  [0x41+0x4]
        ES ID: 0  [0x45+0x2]
        Flags: 0x0 []  [0x47+0x1]
      ▾ DecoderConfigDescriptor  [0x48+0x19]
          Tag: DecoderConfigDescriptor (0x4)  [0x48+0x1]
          Length: 20  [0x49+0x4]
          Object type: MPEG-4 audio (0x40)  [0x4d+0x1]
          Stream type: 0x14 — audio  [0x4e+0x1]
          Buffer size: 6144  [0x4f+0x3]
          Maximum bit rate: 4984  [0x52+0x4]
          Average bit rate: 32000  [0x56+0x4]
        ▾ DecoderSpecificInfo  [0x5a+0x7]
            Tag: DecoderSpecificInfo (0x5)  [0x5a+0x1]
            Length: 2  [0x5b+0x4]
            AudioSpecificConfig: 14 08  |..| — AAC LC, 16000 Hz, channel configuration 1  [0x5f+0x2]
      ▾ SLConfigDescriptor  [0x61+0x6]
          Tag: SLConfigDescriptor (0x6)  [0x61+0x1]
          Length: 1  [0x62+0x4]
          Predefined: MP4 (0x2)  [0x66+0x1]
  ▾ chan — Mono, 1 ch  [0x67+0x18]
      Chunk type: "chan"  [0x67+0x4]
      Chunk size: 12  [0x6b+0x8]
      Layout tag: 0x640001 — Mono, 1 ch  [0x73+0x4]
      Channel bitmap: 0x0 []  [0x77+0x4]
      Channel descriptions: 0  [0x7b+0x4]
  ▾ info — 63 bytes  [0x7f+0x4b]
      Chunk type: "info"  [0x7f+0x4]
      Chunk size: 63  [0x83+0x8]
      Entries: 2  [0x8b+0x4]
      approximate duration in seconds: "0.192"  [0x8f+0x26]
      source bit depth: "I16"  [0xb5+0x15]
  ▾ pakt — 6 packets, 3200 valid frames  [0xca+0x2d]
      Chunk type: "pakt"  [0xca+0x4]
      Chunk size: 33  [0xce+0x8]
      Packets: 6  [0xd6+0x8]
      Valid frames: 3200  [0xde+0x8]
      Priming frames: 2112  [0xe6+0x4]
      Remainder frames: 832  [0xea+0x4]
    ▾ Packet sizes — 6 packets  [0xee+0x9]
        Packet 0: 4 — 4 bytes at 0x0  [0xee+0x1] → 0x1000+0x4
        Packet 1: 158 — 158 bytes at 0x4  [0xef+0x2] → 0x1004+0x9e
        Packet 2: 155 — 155 bytes at 0xa2  [0xf1+0x2] → 0x10a2+0x9b
        Packet 3: 121 — 121 bytes at 0x13d  [0xf3+0x1] → 0x113d+0x79
        Packet 4: 185 — 185 bytes at 0x1b6  [0xf4+0x2] → 0x11b6+0xb9
        Packet 5: 4 — 4 bytes at 0x26f  [0xf6+0x1] → 0x126f+0x4
  ▾ free — 3821 bytes  [0xf7+0xef9]
      Chunk type: "free"  [0xf7+0x4]
      Chunk size: 3821  [0xfb+0x8]
      Padding  [0x103+0xeed]
  ▾ data — 627 bytes of audio  [0xff0+0x283]
      Chunk type: "data"  [0xff0+0x4]
      Chunk size: 631  [0xff4+0x8]
      Edit count: 1  [0xffc+0x4]
      Audio data  [0x1000+0x273]
