tests/snapshots/formats__caf__alac-afconvert.caf.snap
---
source: tests/formats.rs
expression: "common::explore(&display_name(&path), &data)"
---
▾ alac-afconvert.caf — CAF Apple Lossless 16-bit, 16 kHz, mono, 200 ms  [0x0+0x1544]
    File type: "caff"  [0x0+0x4]
    Version: 1  [0x4+0x2]
    Flags: 0  [0x6+0x2]
  ▾ desc — Apple Lossless 16-bit, 16 kHz, 1 ch  [0x8+0x2c]
      Chunk type: "desc"  [0x8+0x4]
      Chunk size: 32  [0xc+0x8]
      Sample rate: 16000  [0x14+0x8]
      Format ID: "alac" — Apple Lossless  [0x1c+0x4]
      Format flags: 16-bit source (0x1)  [0x20+0x4]
      Bytes per packet: 0  [0x24+0x4]
      Frames per packet: 4096  [0x28+0x4]
      Channels per frame: 1  [0x2c+0x4]
      Bits per channel: 0  [0x30+0x4]
  ▾ kuki — ALAC configuration  [0x34+0x24]
      Chunk type: "kuki"  [0x34+0x4]
      Chunk size: 24  [0x38+0x8]
    ▾ ALACSpecificConfig — 16-bit, 16 kHz, 1 ch, 4096 samples per frame  [0x40+0x18]
        Frame length: 4096  [0x40+0x4]
        Compatible version: 0  [0x44+0x1]
        Bit depth: 16  [0x45+0x1]
        Rice history multiplier (pb): 40  [0x46+0x1]
        Rice initial history (mb): 10  [0x47+0x1]
        Rice parameter limit (kb): 14  [0x48+0x1]
        Channels: 1  [0x49+0x1]
        Maximum run: 255  [0x4a+0x2]
        Maximum frame bytes: 1348  [0x4c+0x4]
        Average bit rate: 42125 — 42.1 kb/s  [0x50+0x4]
        Sample rate: 16000  [0x54+0x4]
  ▾ chan — Mono, 1 ch  [0x58+0x18]
      Chunk type: "chan"  [0x58+0x4]
      Chunk size: 12  [0x5c+0x8]
      Layout tag: 0x640001 — Mono, 1 ch  [0x64+0x4]
      Channel bitmap: 0x0 []  [0x68+0x4]
      Channel descriptions: 0  [0x6c+0x4]
  ▾ info — 59 bytes  [0x70+0x47]
      Chunk type: "info"  [0x70+0x4]
      Chunk size: 59  [0x74+0x8]
      Entries: 2  [0x7c+0x4]
      approximate duration in seconds: "0"  [0x80+0x22]
      source bit depth: "I16"  [0xa2+0x15]
  ▾ pakt — 1 packets, 3200 valid frames  [0xb7+0x26]
      Chunk type: "pakt"  [0xb7+0x4]
      Chunk size: 26  [0xbb+0x8]
      Packets: 1  [0xc3+0x8]
      Valid frames: 3200  [0xcb+0x8]
      Priming frames: 0  [0xd3+0x4]
      Remainder frames: 896  [0xd7+0x4]
    ▾ Packet sizes — 1 packets  [0xdb+0x2]
        Packet 0: 1348 — 1348 bytes at 0x0  [0xdb+0x2] → 0x1000+0x544
  ▾ free — 3847 bytes  [0xdd+0xf13]
      Chunk type: "free"  [0xdd+0x4]
      Chunk size: 3847  [0xe1+0x8]
      Padding  [0xe9+0xf07]
  ▾ data — 1348 bytes of audio  [0xff0+0x554]
      Chunk type: "data"  [0xff0+0x4]
      Chunk size: 1352  [0xff4+0x8]
      Edit count: 1  [0xffc+0x4]
      Audio data  [0x1000+0x544]
