tests/snapshots/formats__caf__alac.caf.snap
---
source: tests/formats.rs
expression: "common::explore(&name, &data)"
---
▾ alac.caf — CAF, Apple Lossless, 8000 Hz, 1 ch, 100 ms  [0x0+0x35f]
    File type: "caff"  [0x0+0x4]
    Version: 1  [0x4+0x2]
    Flags: 0  [0x6+0x2]
  ▾ desc — Apple Lossless, 8000 Hz, 1 ch  [0x8+0x2c]
      Chunk type: "desc"  [0x8+0x4]
      Chunk size: 32  [0xc+0x8]
    ▾ Description  [0x14+0x20]
        Sample rate: 8000  [0x14+0x8]
        Format ID: "alac" — Apple Lossless  [0x1c+0x4]
        Format flags: 0x0  [0x20+0x4]
        Bytes per packet: 0  [0x24+0x4]
        Frames per packet: 4096  [0x28+0x4]
        Channels per frame: 1  [0x2c+0x4]
        Bits per channel: 0  [0x30+0x4]
  ▾ chan — 12 bytes  [0x34+0x18]
      Chunk type: "chan"  [0x34+0x4]
      Chunk size: 12  [0x38+0x8]
      Layout tag: 0x640001 — layout 100, 1 channels  [0x40+0x4]
      Channel bitmap: 0x0  [0x44+0x4]
      Channel descriptions: 0  [0x48+0x4]
  ▾ kuki — 48 bytes  [0x4c+0x3c]
      Chunk type: "kuki"  [0x4c+0x4]
      Chunk size: 48  [0x50+0x8]
      Data  [0x58+0x30]
  ▾ data — 677 bytes  [0x88+0x2b1]
      Chunk type: "data"  [0x88+0x4]
      Chunk size: 677  [0x8c+0x8]
      Edit count: 0  [0x94+0x4]
      Audio data  [0x98+0x2a1]
  ▾ pakt — 26 bytes  [0x339+0x26]
      Chunk type: "pakt"  [0x339+0x4]
      Chunk size: 26  [0x33d+0x8]
      Packets: 1  [0x345+0x8]
      Valid frames: 800  [0x34d+0x8]
      Priming frames: 0  [0x355+0x4]
      Remainder frames: 3296  [0x359+0x4]
      Packet sizes  [0x35d+0x2]
