tests/snapshots/formats__caf__opus-afconvert.caf.snap
---
source: tests/formats.rs
expression: "common::explore(&display_name(&path), &data)"
---
▾ opus-afconvert.caf — CAF Opus, 16 kHz, mono, 200 ms  [0x0+0x1249]
    File type: "caff"  [0x0+0x4]
    Version: 1  [0x4+0x2]
    Flags: 0  [0x6+0x2]
  ▾ desc — Opus, 16 kHz, 1 ch  [0x8+0x2c]
      Chunk type: "desc"  [0x8+0x4]
      Chunk size: 32  [0xc+0x8]
      Sample rate: 16000  [0x14+0x8]
      Format ID: "opus" — Opus  [0x1c+0x4]
      Format flags: 0x0  [0x20+0x4]
      Bytes per packet: 0  [0x24+0x4]
      Frames per packet: 320  [0x28+0x4]
      Channels per frame: 1  [0x2c+0x4]
      Bits per channel: 0  [0x30+0x4]
  ▾ kuki — 28 bytes  [0x34+0x28]
      Chunk type: "kuki"  [0x34+0x4]
      Chunk size: 28  [0x38+0x8]
      Data  [0x40+0x1c]
  ▾ chan — Mono, 1 ch  [0x5c+0x18]
      Chunk type: "chan"  [0x5c+0x4]
      Chunk size: 12  [0x60+0x8]
      Layout tag: 0x640001 — Mono, 1 ch  [0x68+0x4]
      Channel bitmap: 0x0 []  [0x6c+0x4]
      Channel descriptions: 0  [0x70+0x4]
  ▾ info — 61 bytes  [0x74+0x49]
      Chunk type: "info"  [0x74+0x4]
      Chunk size: 61  [0x78+0x8]
      Entries: 2  [0x80+0x4]
      approximate duration in seconds: "0.2"  [0x84+0x24]
      source bit depth: "I16"  [0xa8+0x15]
  ▾ pakt — 11 packets, 3200 valid frames  [0xbd+0x2f]
      Chunk type: "pakt"  [0xbd+0x4]
      Chunk size: 35  [0xc1+0x8]
      Packets: 11  [0xc9+0x8]
      Valid frames: 3200  [0xd1+0x8]
      Priming frames: 104  [0xd9+0x4]
      Remainder frames: 216  [0xdd+0x4]
    ▾ Packet sizes — 11 packets  [0xe1+0xb]
        Packet 0: 74 — 74 bytes at 0x0  [0xe1+0x1] → 0x1000+0x4a
        Packet 1: 44 — 44 bytes at 0x4a  [0xe2+0x1] → 0x104a+0x2c
        Packet 2: 55 — 55 bytes at 0x76  [0xe3+0x1] → 0x1076+0x37
        Packet 3: 51 — 51 bytes at 0xad  [0xe4+0x1] → 0x10ad+0x33
        Packet 4: 52 — 52 bytes at 0xe0  [0xe5+0x1] → 0x10e0+0x34
        Packet 5: 54 — 54 bytes at 0x114  [0xe6+0x1] → 0x1114+0x36
        Packet 6: 53 — 53 bytes at 0x14a  [0xe7+0x1] → 0x114a+0x35
        Packet 7: 58 — 58 bytes at 0x17f  [0xe8+0x1] → 0x117f+0x3a
        Packet 8: 51 — 51 bytes at 0x1b9  [0xe9+0x1] → 0x11b9+0x33
        Packet 9: 55 — 55 bytes at 0x1ec  [0xea+0x1] → 0x11ec+0x37
        Packet 10: 38 — 38 bytes at 0x223  [0xeb+0x1] → 0x1223+0x26
  ▾ free — 3832 bytes  [0xec+0xf04]
      Chunk type: "free"  [0xec+0x4]
      Chunk size: 3832  [0xf0+0x8]
      Padding  [0xf8+0xef8]
  ▾ data — 585 bytes of audio  [0xff0+0x259]
      Chunk type: "data"  [0xff0+0x4]
      Chunk size: 589  [0xff4+0x8]
      Edit count: 1  [0xffc+0x4]
      Audio data  [0x1000+0x249]
