tests/snapshots/formats__caf__pcm.caf.snap
---
source: tests/formats.rs
expression: "common::explore(&display_name(&path), &data)"
---
▾ pcm.caf — CAF Linear PCM 16-bit BE, 8 kHz, mono, 50 ms  [0x0+0x397]
    File type: "caff"  [0x0+0x4]
    Version: 1  [0x4+0x2]
    Flags: 0  [0x6+0x2]
  ▾ desc — Linear PCM 16-bit BE, 8 kHz, 1 ch  [0x8+0x2c]
      Chunk type: "desc"  [0x8+0x4]
      Chunk size: 32  [0xc+0x8]
      Sample rate: 8000  [0x14+0x8]
      Format ID: "lpcm" — Linear PCM  [0x1c+0x4]
      Format flags: 0x0 []  [0x20+0x4]
      Bytes per packet: 2  [0x24+0x4]
      Frames per packet: 1  [0x28+0x4]
      Channels per frame: 1  [0x2c+0x4]
      Bits per channel: 16  [0x30+0x4]
  ▾ chan — Mono, 1 ch  [0x34+0x18]
      Chunk type: "chan"  [0x34+0x4]
      Chunk size: 12  [0x38+0x8]
      Layout tag: 0x640001 — Mono, 1 ch  [0x40+0x4]
      Channel bitmap: 0x0 []  [0x44+0x4]
      Channel descriptions: 0  [0x48+0x4]
  ▾ info — 15 bytes  [0x4c+0x1b]
      Chunk type: "info"  [0x4c+0x4]
      Chunk size: 15  [0x50+0x8]
      Entries: 1  [0x58+0x4]
      title: "Tone"  [0x5c+0xb]
  ▾ data — 800 bytes of audio  [0x67+0x330]
      Chunk type: "data"  [0x67+0x4]
      Chunk size: 804  [0x6b+0x8]
      Edit count: 0  [0x73+0x4]
      Audio data  [0x77+0x320]
